@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.57 2005/04/11 21:46:39 tv Exp $
+# $NetBSD: Makefile,v 1.58 2005/08/01 10:27:59 cube Exp $
 
 DISTNAME=	screen-4.0.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 MASTER_SITES=	ftp://ftp.uni-erlangen.de/pub/utilities/screen/ \
 		${MASTER_SITE_GNU:=screen/}
@@ -21,6 +21,8 @@ PLIST_SUBST=		DISTNAME=${DISTNAME}
 GNU_CONFIGURE=		# defined
 CONFIGURE_ARGS+=	--with-sys-screenrc=${PKG_SYSCONFDIR}/screenrc
 CONFIGURE_ARGS+=	--enable-telnet
+
+PKG_SHELL=		bin/screen
 
 .include "../../mk/bsd.prefs.mk"
 
